--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,175 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.body {
+  top: 0px;
+  left: 0px;
+  background: #f8f7f6 0% 0% no-repeat padding-box;
+  opacity: 1;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+/* Hide the default scrollbar */
+.scrollBar::-webkit-scrollbar {
+  width: 5px;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+/* Track */
+.scrollBar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.scrollBar::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.scrollBar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+.top-nav {
+  margin-top: 20px;
+  left: 18px;
+  height: 72px;
+  background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 70px;
+  opacity: 1;
+}
+
+.logo-wrapper {
+  top: 30px;
+  left: 50px;
+  width: 211px;
+  height: 48px;
+  background: transparent url('/images/TestLogo.svg') 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+
+.nav-bar {
+  overflow: hidden;
+}
+
+.bg-purple {
+  background-color: #F4F0FE !important;
+}
+
+.patientList:hover {
+  cursor: pointer;
+  border-bottom: 1px solid #333;
+  background-color: #e6e4e4;
+}
+
+.table-secondary {
+  background-color: #F6F7F8 !important;
+  color: #000 !important;
+  border-radius: 10% !important;
+}
+
+
+.asideRight {
+  max-height: 630px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.tableHeight {
+  max-height: 260px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.listHeight {
+  max-height: 200px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.menu {
+  list-style-type: none;
   margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.menu-item {
+  padding: 14px 20px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
+.menu-item a {
+  color: #000;
   text-decoration: none;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  transition: background-color 0.3s;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+.active {
+  background: #01F0D0;
+  border-radius: 41px;
+  opacity: 1;
+  padding: 10px;
+}
+
+.icon-wrap {
+  width: 22px;
+  height: 17px;
+  opacity: 1;
+}
+
+.icon-wrap img {
+  padding-right: 5px;
+}
+
+.text-holder {
+  padding-top: .15rem !important;
+}
+
+.profile-card {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.profile-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 15px;
+}
+
+.profile-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-body {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+
+.profile-header {
+  font-size: 14px;
+
+}
+
+.cardBackground-1 {
+  background-color: #E0F3FA !important;
+}
+
+.cardBackground-2 {
+  background-color: #FFE6E9 !important;
+}
+
+.cardBackground-3 {
+  background-color: #FFE6F1 !important;
+}
+
+.selected {
+  background: #01F0D0;
 }
