--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,14 +36,14 @@
   opacity: 1;
 }
 
-.logo-wrapper {
+/* .logo-wrapper {
   top: 30px;
   left: 50px;
   width: 211px;
   height: 48px;
   background: transparent url('/images/TestLogo.svg') 0% 0% no-repeat padding-box;
   opacity: 1;
-}
+} */
 
 .nav-bar {
   overflow: hidden;
