--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 :root {
   --color-background: #f8f7f6;
@@ -106,12 +106,14 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: "Manrope", sans-serif;
 }
 
 .body {
   padding: 0px;
-  font-family: "Roboto", system-ui, ui-sans-serif, sans-serif;
+  font-family: "Manrope", sans-serif;
   background: var(--color-background) no-repeat padding-box;
+
 }
 
 /* Hide the default scrollbar */
